--- a/render.yaml
+++ b/render.yaml
@@ -12,7 +12,7 @@ services:
       - key: CHROMEDRIVER_PATH 
         value: /app/.chromedriver/bin/chromedriver
       - key: LD_LIBRARY_PATH 
-        value: /app/.heroku/vendor/lib:/app/.heroku/python/lib:/app/.apt/usr/lib/x86_64-linux-gnu:/app/.apt/usr/lib/i386-linux-gnu:/app/.apt/usr/lib:
+        value: /app/.heroku/vendor/lib:/app/.heroku/python/lib:/app/.apt/usr/lib/x86_64-linux-gnu:/app/.apt/usr/lib/i386-linux-gnu:/app/.apt/usr/lib
       - key: GOOGLE_CHROME_BIN 
         value: /app/.apt/usr/bin/google-chrome
       - key: PYTHON_VERSION 
