--- a/render.yaml
+++ b/render.yaml
@@ -5,7 +5,7 @@ services:
     buildCommand: pip install -r requirements.txt
     startCommand: python main.py
     repo: https://github.com/sholoomail/theimagebot.git
-    branch: master
+    branch: main
     envVars:
       - key: TOKEN 
         sync: false
